Use List.of() and Map.of() in Request.